# epg_android_EFR

./: .gitignore  README.md  gradle.properties
mobile/: build.gradle.kts
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flowehealth.cbp  native-lib.cpp
mobile/src/main/cpp/flowehealgorithms/: basic_charts.cpp  basic_charts.h  flowehealgorithms.h  histogram.cpp  histogram.h  peak_detection.cpp  peak_detection.h
mobile/src/main/cpp/flowehealgorithms/DSP/: epg_integrator.cpp  epg_integrator.h  filter.cpp  filter.h
mobile/src/main/res/animator/: lift_on_touch.xml
mobile/src/main/res/drawable/: button_background.xml
mobile/src/main/res/layout/: activity_advertiser_config.xml  activity_blinky.xml  activity_blinky_thunderboard.xml  activity_device_services.xml  activity_epg.xml  activity_gatt_server.xml  activity_light.xml  activity_main.xml  activity_thermometer.xml  activity_throughput.xml  activity_thunderboard_base.xml  activity_wifi_commissioning.xml  adapter_advertiser.xml  adapter_browser_device.xml  adapter_edit_gatt_server.xml  adapter_esl_tag_info.xml  adapter_gatt_server.xml  battery_indicator.xml  fragment_advertiser.xml  fragment_browser.xml  fragment_connections.xml  fragment_demo.xml  fragment_device_status.xml  fragment_gatt_configurator.xml  fragment_graph.xml  fragment_light.xml  fragment_main_view.xml  fragment_services.xml  fragment_test.xml  fragment_throughput.xml  iodemo_color_leds.xml  service_container.xml
mobile/src/main/res/menu/: bottom_nav_main.xml
(+386 files in other folders)
